@@ -15,8 +15,9 @@ void WaveFrontObj_GetVertices(std::vector<Vertex3D_NoTex2>& objMesh);
 void WaveFrontObj_GetIndices(std::vector<unsigned int>& list);
 bool WaveFrontObj_Load(const char *filename, const bool flipTv, const bool convertToLeftHanded);
 void WaveFrontObj_WriteFaceInfoList(FILE *f, const WORD *faces, unsigned int numFaces);
-void WaveFrontObj_WriteMaterial(const char *texelName, const char *texelFilename);
+void WaveFrontObj_WriteMaterial(const char *texelName, const char *texelFilename, Material *mat);
 void WaveFrontObj_UseTexture(FILE *f, const char *texelName);
+bool WaveFrontObjLoadMaterial(const char *filename, Material *mat);
 
 
 #endif // !_OBJLOADER_H
